syntax = "proto3";

option go_package = "generated/bot-module";

service BotModuleService {
  rpc HandleUpdate (UpdateRequest) returns (UpdateResponse);
}

message UpdateRequest {
  string update_json = 1;
  int64 from_id = 2;
  string update_type = 3;
  string update_source = 4;
}

message UpdateResponse {
  bool success = 1;
  string message = 2;
}